TF-helm/jenkins-virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: jenkins-gateway
  namespace: jenkins
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "jenkins.app.com"
      tls:
        httpsRedirect: false # sends 301 redirect for http requests
    - port:
        number: 443
        name: https
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: tls.jenkins.app.com
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: jenkins
  namespace: jenkins
spec:
  gateways:
    - jenkins-gateway
  hosts:
    - jenkins.app.com
  http:
    - route:
      - destination:
          host: jenkins.jenkins.svc.cluster.local
          port:
            number: 8080
